# feed-query-ui

./: .gitignore  README.md
.agents/skills/testing-feed-query-ui/: SKILL.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  query_engine.py  spark_manager.py
backend/data/: billing_feed_data.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: ChatMessage.tsx  QueryInput.tsx  ResultTable.tsx  SchemaPanel.tsx  StatusBadge.tsx
tableau/: Feed_Operations_Dashboard.twb  Feed_Operations_Dashboard.twbx  README.md  generate_workbook.py
